--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="https://mobiri.se">
+					<a href="jeetendrachaurasia.in">
 						<img src="assets/images/jeetendra-kr.jpg-160x162.jpg" alt="Mobirise Website Builder" style="height: 3rem;">
 					</a>
 				</span>
